[package]
name = "clipper2-src"
version = "2.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["Mariusz Klochowicz <mariusz@klochowicz.com>"]
description = "Source distribution of Clipper2 polygon clipping library"
license = "BSL-1.0"
repository = "https://github.com/AML3D/clipper2-src"
keywords = ["clipper2", "polygon", "clipping", "offset", "geometry"]
categories = ["external-ffi-bindings", "development-tools::build-utils"]
links = "clipper2"
include = [
    "src/**",
    "build.rs",
    "LICENSE",
    "README.md",
    "Clipper2/CPP/Clipper2Lib/**",
]

[build-dependencies]
cc = "1"
